--- a/res/layout/activity_frisbee_golf_scores.xml
+++ b/res/layout/activity_frisbee_golf_scores.xml
@@ -13,7 +13,7 @@
         android:text="Stat new course" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnPlayers"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,9 +38,9 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button3"
-        android:layout_alignBottom="@+id/button3"
-        android:layout_toRightOf="@+id/button3"
+        android:layout_alignBaseline="@+id/btnPlayers"
+        android:layout_alignBottom="@+id/btnPlayers"
+        android:layout_toRightOf="@+id/btnPlayers"
         android:text="Teams" />
 
     <Button
@@ -77,9 +77,9 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button3"
+        android:layout_alignLeft="@+id/btnPlayers"
         android:layout_alignRight="@+id/button6"
-        android:layout_below="@+id/button3"
+        android:layout_below="@+id/btnPlayers"
         android:layout_marginTop="80dp"
         android:text="TextView" />
 
@@ -88,8 +88,8 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button3"
-        android:layout_below="@+id/button3"
+        android:layout_alignLeft="@+id/btnPlayers"
+        android:layout_below="@+id/btnPlayers"
         android:layout_marginTop="15dp"
         android:onClick="onClick"
         android:text="Asetukset" />
