--- a/res/layout/activity_frisbee_golf_scores.xml
+++ b/res/layout/activity_frisbee_golf_scores.xml
@@ -21,7 +21,7 @@
         android:layout_below="@+id/button1"
         android:layout_marginLeft="18dp"
         android:layout_marginTop="28dp"
-        android:text="Players" />
+        android:text="@string/main_btn_players" />
 
     <Button
         android:id="@+id/button2"
@@ -41,7 +41,7 @@
         android:layout_alignBaseline="@+id/btnPelaajat"
         android:layout_alignBottom="@+id/btnPelaajat"
         android:layout_toRightOf="@+id/btnPelaajat"
-        android:text="Teams" />
+        android:text="@string/main_btn_teams" />
 
     <TextView
         android:id="@+id/textView1"
@@ -61,18 +61,7 @@
         android:layout_below="@+id/btnPelaajat"
         android:layout_marginTop="15dp"
         android:onClick="onClick"
-        android:text="Asetukset" />
-
-    <ProgressBar
-        android:id="@+id/progressBar1"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignTop="@+id/btnPelaajat"
-        android:indeterminate="false"
-        android:max="10"
-        android:padding="4dip" />
+        android:text="@string/main_btn_settings" />
 
     <Button
         android:id="@+id/button5"
@@ -94,5 +83,16 @@
         android:layout_marginRight="26dp"
         android:onClick="startGps"
         android:text="GPS" />
+
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/button1"
+        android:indeterminate="false"
+        android:max="10"
+        android:padding="4dip" />
 
 </RelativeLayout>
