--- a/res/xml/pref_headers.xml
+++ b/res/xml/pref_headers.xml
@@ -2,7 +2,7 @@
 <preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <header
-        android:fragment="my.domain.app.PrefsActivity$PrefsFragment"
+        android:fragment="com.example.frisbeegolfscores.ActivityAsetukset$PrefsFragment"
         android:icon="@android:drawable/ic_menu_sort_by_size"
         android:title="@string/settings_caption_language" >
         <extra
@@ -10,7 +10,7 @@
             android:value="app_prefs_cat1" />
     </header>
     <header
-        android:fragment="my.domain.app.PrefsActivity$PrefsFragment"
+        android:fragment="com.example.frisbeegolfscores.ActivityAsetukset$PrefsFragment"
         android:icon="@android:drawable/ic_menu_gallery"
         android:title="@string/settings_caption_generic" >
         <extra
@@ -18,7 +18,7 @@
             android:value="app_prefs_cat2" />
     </header>
     <header
-        android:fragment="my.domain.app.PrefsActivity$PrefsFragment"
+        android:fragment="com.example.frisbeegolfscores.ActivityAsetukset$PrefsFragment"
         android:icon="@android:drawable/ic_menu_edit"
         android:title="@string/settings_caption_htmlsource" >
         <extra
