--- a/res/layout/activity_frisbee_golf_scores.xml
+++ b/res/layout/activity_frisbee_golf_scores.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    tools:context=".FrisbeeGolfScores" >
 
     <Button
         android:id="@+id/button1"
@@ -21,6 +22,7 @@
         android:layout_below="@+id/button1"
         android:layout_marginLeft="18dp"
         android:layout_marginTop="28dp"
+        android:onClick="onClick"
         android:text="@string/main_btn_players" />
 
     <Button
